Working version with hover, and about / credit updated text

--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,8 @@ theme = "hugo-theme-crisp"
 [params]
     
     tagline = "sports analytics blog"
-    logo = "https://stevenliao.me/img/self_portrait.png"
-    hoverlogo = "https://stevenliao.me/img/self_portrait_colored.png"
+    logo = "/img/self_portrait.png" 
+    hoverlogo = "/img/self_portrait_colored.png"
     index = "list"
     linkedin = "https://www.linkedin.com/in/steven-liao-997688b8/" 
     
